Did the title screen
yas sirrrrr

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body id="background">
     <div id="outer">
         <div id="inner"><img id="title" src="Assets/Overall_UI/Casino Icon.png"></div>
+        <div class="noselect" id="play_button"><a href="gameSelect.html"></a>PLAY!</div>
     </div>
 </body>
 </html>
