Fixed the button...... for now
Last time I swear

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body id="background">
     <div id="outer">
         <div id="inner"><img id="title" src="Assets/Overall_UI/Casino Icon.png"></div>
-        <div class="noselect" id="play_button"><a href="gameSelect.html"></a>PLAY!</div>
+        <a style="text-decoration: none;" href="gameSelect.html">
+            <div class="noselect" id="play_button">PLAY!</div>
+        </a>
     </div>
 </body>
 </html>
