Bank and Home Button

--- a/gameSelect.html
+++ b/gameSelect.html
@@ -17,5 +17,11 @@
             <img id="crapsIconBtn" src="Assets/Overall_UI/Craps Icon.png">
             <img id="slotsIconBtn" src="Assets/Overall_UI/Slot Machine Icon.png">
         </div>
+        <a style="text-decoration: none;" href="gameSelect.html">
+            <div class="noselect" id="bank_button">BANK</div>
+        </a>
+        <a style="text-decoration: none;" href="index.html">
+            <div class="noselect" id="home_button">HOME</div>
+        </a>
     </div>
 </body>
