--- a/gameSelect.html
+++ b/gameSelect.html
@@ -17,7 +17,7 @@
             <img id="crapsIconBtn" src="Assets/Overall_UI/Craps Icon.png" onclick="window.location.href='craps.html'">
             <img id="slotsIconBtn" src="Assets/Overall_UI/Slot Machine Icon.png" onclick="window.location.href='slots.html'">
         </div>
-        <a style="text-decoration: none;" href="gameSelect.html">
+        <a style="text-decoration: none;" href="bank.html">
             <div class="noselect" id="bank_button">BANK</div>
         </a>
         <a style="text-decoration: none;" href="index.html">
