--- a/blackJack.html
+++ b/blackJack.html
@@ -11,5 +11,6 @@
     <div id="outer">
         <img id="blackJackTable" src="Assets/BlackJack/BlackJackTable.png">
     </div>
+    <script src="blackJack.js"></script>
 </body>
 </html>
