--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
             <div class="noselect" id="play_button">PLAY!</div>
         </a>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
