--- a/poker.html
+++ b/poker.html
@@ -27,21 +27,26 @@
         </div>
         
     </div>
-    <div id="lowUI">
-        <a style="text-decoration: none;" href="gameSelect.html">
-            <div class="noselect" id="backBtn">BACK</div>
-        </a>
-        <div id="chips">
-            <div class="chip" id="chip1" onclick="chipSelect(this)"></div>
-            <div class="chip" id="chip2" onclick="chipSelect(this)"></div>
-            <div class="chip" id="chip3" onclick="chipSelect(this)"></div>
-            <div class="chip" id="chip4" onclick="chipSelect(this)"></div>
-            <div class="chip" id="chip5" onclick="chipSelect(this)"></div>
-            <div class="chip" id="chip6" onclick="chipSelect(this)"></div>
-            <div class="chip" id="chip7" onclick="chipSelect(this)"></div>
-            <div class="chip" id="chip8" onclick="chipSelect(this)"></div>
+    
+    <div id="bank">$0</div>
+
+    <div id=lowCont>
+        <div id="lowUI">
+            <a style="text-decoration: none;" href="gameSelect.html">
+                <div class="noselect" id="backBtn">BACK</div>
+            </a>
+            <div id="chips">
+                <div class="chip" id="chip1" onclick="chipSelect(this)"></div>
+                <div class="chip" id="chip2" onclick="chipSelect(this)"></div>
+                <div class="chip" id="chip3" onclick="chipSelect(this)"></div>
+                <div class="chip" id="chip4" onclick="chipSelect(this)"></div>
+                <div class="chip" id="chip5" onclick="chipSelect(this)"></div>
+                <div class="chip" id="chip6" onclick="chipSelect(this)"></div>
+                <div class="chip" id="chip7" onclick="chipSelect(this)"></div>
+                <div class="chip" id="chip8" onclick="chipSelect(this)"></div>
+            </div>
+            <div class="noselect" id="drawBtn" onclick="dealClick()">DEAL</div>
         </div>
-        <div class="noselect" id="drawBtn" onclick="dealClick()">DEAL</div>
     </div>
     <script src="poker.js"></script>
 </body>
