--- a/blackJack.html
+++ b/blackJack.html
@@ -24,6 +24,8 @@
 
     <div id="bank">$0</div>
 
+    <div id="result">You Win!</div>
+
     
     <div id="player">
         <h3 id="playerScore">0</h3>
