Got rid of debug borders in poker
Yaaaaaaahhh

--- a/craps.html
+++ b/craps.html
@@ -11,5 +11,12 @@
     <div id="outer">
         <img id="crapsTable" src="Assets/Craps/CrapsBoard.png">
     </div>
+    <div id="container">
+        <div id="dice">
+            <div class="die" id="dice1" onclick="diceClick(this)"></div>
+            <div class="die" id="dice2" onclick="diceClick(this)"></div>
+        </div>
+    </div>
+    <script src=craps.js></script>
 </body>
 </html>
